# born-digital-docs-scripts

./: .gitignore  README.md  bd_validator.py  noxfile.py  pyproject.toml  test_bd_validator.py
fixtures/simple_video_pk/: manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha512.txt
mediaconch/: Archive Original Video Accepted_em.xml  Archive Original Video Accepted_sc.xml  BDD Audio AO Preferred.xml  archive_original_video_preferred.xml
src/born_digital_docs_scripts/: bd_validator.py
tests/: test_bd_validator.py
tests/fixtures/simple_video_pk/: bag-info.txt  tagmanifest-sha256.txt
